// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config schema with context {"dist":false} produces correct config 1`] = `
Object {
  "enabled": true,
  "encryptionKey": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
}
`;

exports[`config schema with context {"dist":true} produces correct config 1`] = `
Object {
  "enabled": true,
}
`;
